add bootstrap support

--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -5,9 +5,20 @@
   <meta charset="UTF-8">
 </head>
 
-<body style="display: flex; align-items: center; justify-content: center;">
-  <div style="width:90%; max-width: 1200px; font-size: 10px;">
-    <h1>Java Quick Start</h1>
+<body>
+  <div class="welcomePage">
+    <div class="row">
+      <div class="col">
+        <h1>Java Quick Start</h1>
+        <h2>Start</h2>
+        <p>Let's take a look. <a href="javascript:createMaven()">Create a Maven project...</a></p>
+      </div>
+      <div class="col">
+          <h1>Java Quick Start</h1>
+          <h2>Start</h2>
+          <p>Let's take a look. <a href="javascript:createMaven()">Create a Maven project...</a></p>
+        </div>
+      </div>
   </div>
 </body>
 
