--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -65,14 +65,14 @@
             <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h6 class="font-weight-light">Edit</h6>
-                  <small>Tools that enhance Java code editing experience</small>
+                  <h6 class="font-weight-light">Kubernetes</h6>
+                  <small>Prepare an application for Azure Kubernetes Service</small>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h6 class="font-weight-light">Debug</h6>
-                  <small>Debug application in a short walkthrough</small>
+                  <h6 class="font-weight-light">Serverless</h6>
+                  <small>Build an Azure Functions app</small>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
