Optimize font size and margins

--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -6,18 +6,18 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
+  <div class="container mt-5 mb-5">
+    <div class="row mb-4">
       <div class="col">
-        <h1 class="font-weight-light">Java Overview</h1>
+        <h1>Java Overview</h1>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <div class="row">
+        <div class="row mb-3">
           <div class="col">
-            <h5 class="font-weight-light">Start</h5>
-            <p class="small">
+            <h3 class="font-weight-light">Start</h3>
+            <p>
               <a href="javascript:cmd()">Create a Maven project...</a><br>
               <a href="javascript:cmd()">Create a Spring Boot project...</a><br>
               <a href="javascript:cmd()">Create a function app...</a><br>
@@ -25,28 +25,28 @@
             </p>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
           <div class="col">
-            <h5 class="font-weight-light">Help</h5>
-            <p class="small">
+            <h3 class="font-weight-light">Help</h3>
+            <p>
               <a href="https://code.visualstudio.com/docs/languages/java">Java in VS Code</a><br>
               <a href="https://code.visualstudio.com/docs/java/java-spring-boot">Spring Boot with VS Code</a><br>
               <a href="https://code.visualstudio.com/docs/java/java-debugging">Java Debugging and Testing</a><br>
             </p>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
           <div class="col">
-            <h5 class="font-weight-light">Samples</h5>
-            <p class="small">
+            <h3 class="font-weight-light">Samples</h3>
+            <p>
               <a href="https://github.com/Microsoft/todo-app-java-on-azure">Todo App Java On Azure</a><br>
             </p>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
           <div class="col">
-            <h5 class="font-weight-light">Extensions</h5>
-            <p class="small">
+            <h3 class="font-weight-light">Extensions</h3>
+            <p>
               <a href="#">Java Language Support by Red Hat</a><br>
               <a href="#">Debugger for Java</a><br>
               <a href="#">Java Test Runner</a><br>
@@ -61,30 +61,30 @@
       <div class="col">
         <div class="row">
           <div class="col">
-            <h5 class="font-weight-light">Tutorials</h5>
+            <h3 class="font-weight-light">Tutorials</h3>
             <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h6 class="font-weight-light">Kubernetes</h6>
-                  <small>Prepare an application for Azure Kubernetes Service</small>
+                  <h5 class="font-weight-light">Kubernetes</h5>
+                  <span>Prepare an application for Azure Kubernetes Service</span>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h6 class="font-weight-light">Serverless</h6>
-                  <small>Build an Azure Functions app</small>
+                  <h5 class="font-weight-light">Serverless</h5>
+                  <span>Build an Azure Functions app</span>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h6 class="font-weight-light">Test</h6>
-                  <small>Run and debug JUnit test cases</small>
+                  <h5 class="font-weight-light">Test</h5>
+                  <span>Run and debug JUnit test cases</span>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
                   <div>
-                    <h6 class="font-weight-light">Maven</h6>
-                    <small>Quickly access Maven commands</small>
+                    <h5 class="font-weight-light">Maven</h5>
+                    <span>Quickly access Maven commands</span>
                   </div>
                 </a>
               </div>
@@ -100,6 +100,7 @@
         </div>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
