Adjust layout and refine text-muted

--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Java Overview</title>
 </head>
 
 <body>
   <div class="container mt-5 mb-5">
-    <div class="row mb-4">
+    <div class="row mb-3">
       <div class="col">
         <h1>Java Overview</h1>
       </div>
@@ -63,31 +64,31 @@
           <div class="col">
             <h3 class="font-weight-light">Tutorials</h3>
             <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action">
+              <a href="#" title="AKS" class="list-group-item list-group-item-action">
                 <div>
-                  <h5 class="font-weight-light">Kubernetes</h5>
-                  <span>Prepare an application for Azure Kubernetes Service</span>
+                  <span>Kubernetes</span><br>
+                  <span class="text-muted">Prepare an application for Azure Kubernetes Service</span>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h5 class="font-weight-light">Serverless</h5>
-                  <span>Build an Azure Functions app</span>
+                  <span>Serverless</span><br>
+                  <span class="text-muted">Build an Azure Functions app</span>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
                 <div>
-                  <h5 class="font-weight-light">Test</h5>
-                  <span>Run and debug JUnit test cases</span>
+                  <span>Test</span><br>
+                  <span class="text-muted">Run and debug JUnit test cases</span>
                 </div>
               </a>
               <a href="#" class="list-group-item list-group-item-action">
-                  <div>
-                    <h5 class="font-weight-light">Maven</h5>
-                    <span>Quickly access Maven commands</span>
-                  </div>
-                </a>
-              </div>
+                <div>
+                  <span>Maven</span><br>
+                  <span class="text-muted">Quickly access Maven commands</span>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
