--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -45,14 +45,24 @@
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Extensions</h3>
-            <p>
-              <a href="command:java.helper.showExtension?%22redhat.java%22" title="Java Linting, Intellisense, formatting, refactoring, Maven/Gradle support and more...">Java Language Support by Red Hat</a><br>
-              <a href="command:java.helper.showExtension?%22vscjava.vscode-java-debug%22" title="Java debugger for Visual Studio Code">Debugger for Java</a><br>
-              <a href="command:java.helper.showExtension?%22vscjava.vscode-java-test%22" title="Run and debug JUnit test cases">Java Test Runner</a><br>
-              <a href="command:java.helper.showExtension?%22vscjava.vscode-maven%22" title="Manage Maven projects, execute goals, generate projects from archetypes">Maven for Java</a><br>
-              <a href="command:java.helper.showExtension?%22adashen.vscode-tomcat%22" title="Debug or run Java WAR package in Apache Tomcat">Tomcat for Java</a><br>
-              <a href="command:java.helper.showExtension?%22shengchen.vscode-checkstyle%22" title="Run CheckStyle while editing code">Checkstyle for Java</a><br>
-            </p>
+            <div ext="redhat.java">
+              <a href="command:java.helper.showExtension?%22redhat.java%22" title="Java Linting, Intellisense, formatting, refactoring, Maven/Gradle support and more...">Java Language Support by Red Hat</a>
+            </div>
+            <div ext="redhat.java">
+              <a exxt="vscjava.vscode-java-debug" href="command:java.helper.showExtension?%22vscjava.vscode-java-debug%22" title="Java debugger for Visual Studio Code">Debugger for Java</a>
+            </div>
+            <div ext="vscjava.vscode-java-test">
+              <a href="command:java.helper.showExtension?%22vscjava.vscode-java-test%22" title="Run and debug JUnit test cases">Java Test Runner</a>
+            </div>
+            <div ext="vscjava.vscode-maven">
+              <a href="command:java.helper.showExtension?%22vscjava.vscode-maven%22" title="Manage Maven projects, execute goals, generate projects from archetypes">Maven for Java</a>
+            </div>
+            <div ext="adashen.vscode-tomcat">
+              <a href="command:java.helper.showExtension?%22adashen.vscode-tomcat%22" title="Debug or run Java WAR package in Apache Tomcat">Tomcat for Java</a>
+            </div>
+            <div ext="shengchen.vscode-checkstyle">
+              <a href="command:java.helper.showExtension?%22shengchen.vscode-checkstyle%22" title="Run CheckStyle while editing code">Checkstyle for Java</a>
+            </div>
           </div>
         </div>
       </div>
@@ -60,23 +70,35 @@
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Spring</h3>
-            <p>
-              <a href="command:java.helper.createSpringBootProject" title="Create a project with Spring Initializr">Create a Spring Boot project...</a><br>
-              <a href="https://code.visualstudio.com/docs/java/java-spring-boot" title="Learn how to work with Spring Boot projects in VS Code">Spring Boot with VS Code</a><br>
-              <a href="https://github.com/spring-projects/spring-petclinic" title="Run PetClinic sample app in VS Code">Spring PetClinic Sample Application</a><br>
-              <a href="command:java.helper.showExtension?%22pivotal.vscode-boot-dev-pack%22" title="Extension collection for developing Spring Boot applications">Spring Boot Extension Pack</a><br>
-            </p>
+            <div>
+              <a href="command:java.helper.createSpringBootProject" title="Create a project with Spring Initializr">Create a Spring Boot project...</a>
+            </div>
+            <div>
+              <a href="https://code.visualstudio.com/docs/java/java-spring-boot" title="Learn how to work with Spring Boot projects in VS Code">Spring Boot with VS Code</a>
+            </div>
+            <div>
+              <a href="https://github.com/spring-projects/spring-petclinic" title="Run PetClinic sample app in VS Code">Spring PetClinic Sample Application</a>
+            </div>
+            <div ext="pivotal.vscode-boot-dev-pack">
+              <a href="command:java.helper.showExtension?%22pivotal.vscode-boot-dev-pack%22" title="Extension collection for developing Spring Boot applications">Spring Boot Extension Pack</a>
+            </div>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Microservices</h3>
-            <p>
-              <a href="https://code.visualstudio.com/docs/java/java-kubernetes">Java with Kubernetes in VS Code</a><br>
-              <a href="https://code.visualstudio.com/docs/java/java-container">Java with Docker in VS Code</a><br>
-              <a href="command:java.helper.showExtension?%22ms-kubernetes-tools.vscode-kubernetes-tools%22">Kubernetes Extension</a><br>
-              <a href="command:java.helper.showExtension?%22peterjausovec.vscode-docker%22">Docker Extension</a><br>
-            </p>
+            <div>
+              <a href="https://code.visualstudio.com/docs/java/java-kubernetes">Java with Kubernetes in VS Code</a>
+            </div>
+            <div>
+              <a href="https://code.visualstudio.com/docs/java/java-container">Java with Docker in VS Code</a>
+            </div>
+            <div ext="ms-kubernetes-tools.vscode-kubernetes-tools">
+              <a href="command:java.helper.showExtension?%22ms-kubernetes-tools.vscode-kubernetes-tools%22">Kubernetes Extension</a>
+            </div>
+            <div ext="peterjausovec.vscode-docker">
+              <a href="command:java.helper.showExtension?%22peterjausovec.vscode-docker%22">Docker Extension</a>
+            </div>
           </div>
         </div>
       </div>
