Hide empty sections

--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -18,28 +18,32 @@
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Start</h3>
-            <p>
-              <a href="command:java.helper.createMavenProject" title="Create a Maven project using archetypes">Create a Maven project...</a><br>
+            <div>
+              <a href="command:java.helper.createMavenProject" title="Create a Maven project using archetypes">Create a Maven project...</a>
+            </div>
               <!-- <a href="command:java.helper.createJavaFile">Create a standalone Java file...</a><br> -->
-            </p>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Help</h3>
-            <p>
-              <a href="https://code.visualstudio.com/docs/languages/java">Java in VS Code Tutorial</a><br>
-              <a href="https://code.visualstudio.com/docs/java/java-debugging">Debugging Tutorial</a><br>
-            </p>
+            <div>
+              <a href="https://code.visualstudio.com/docs/languages/java">Java in VS Code Tutorial</a>
+            </div>
+            <div>
+              <a href="https://code.visualstudio.com/docs/java/java-debugging">Debugging Tutorial</a>
+            </div>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Key Bindings</h3>
-            <p>
-              <a href="command:java.helper.showExtension?%22k--kato.intellij-idea-keybindings%22">IntelliJ IDEA Keybindings</a><br>
-              <a href="command:java.helper.showExtension?%22alphabotsec.vscode-eclipse-keybindings%22">Eclipse Keymap</a><br>
-            </p>
+            <div ext="k--kato.intellij-idea-keybindings">
+              <a href="command:java.helper.showExtension?%22k--kato.intellij-idea-keybindings%22">IntelliJ IDEA Keybindings</a>
+            </div>
+            <div ext="alphabotsec.vscode-eclipse-keybindings">
+              <a href="command:java.helper.showExtension?%22alphabotsec.vscode-eclipse-keybindings%22">Eclipse Keymap</a>
+            </div>
           </div>
         </div>
         <div class="row mb-3">
