Toggle overview page visibility

--- a/src/welcome/assets/index.html
+++ b/src/welcome/assets/index.html
@@ -110,8 +110,8 @@
     <div class="row">
       <div class="col">
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" checked>
-          <label class="form-check-label" for="exampleCheck1">Show overview page when using Java</label>
+          <input type="checkbox" class="form-check-input" id="showWhenUsingJava" checked>
+          <label class="form-check-label" for="showWhenUsingJava">Show overview page when using Java</label>
         </div>
       </div>
     </div>
