--- a/src/overview/assets/index.html
+++ b/src/overview/assets/index.html
@@ -21,7 +21,10 @@
             <div>
               <a href="command:java.helper.createMavenProject" title="Create a Maven project using archetypes">Create a Maven project...</a>
             </div>
-              <!-- <a href="command:java.helper.createJavaFile">Create a standalone Java file...</a><br> -->
+            <div>
+              <a href="command:java.helper.createSpringBootProject" title="Create a project with Spring Initializr">Create a Spring Boot project...</a>
+            </div>
+            <!-- <a href="command:java.helper.createJavaFile">Create a standalone Java file...</a><br> -->
           </div>
         </div>
         <div class="row mb-3">
@@ -32,6 +35,9 @@
             </div>
             <div>
               <a href="https://code.visualstudio.com/docs/java/java-debugging">Debugging Tutorial</a>
+            </div>
+            <div>
+              <a href="https://github.com/Microsoft/vscode-java-pack/issues">🙋 Questions & Issues</a>
             </div>
           </div>
         </div>
@@ -74,9 +80,6 @@
         <div class="row mb-3">
           <div class="col">
             <h3 class="font-weight-light">Spring</h3>
-            <div>
-              <a href="command:java.helper.createSpringBootProject" title="Create a project with Spring Initializr">Create a Spring Boot project...</a>
-            </div>
             <div>
               <a href="https://code.visualstudio.com/docs/java/java-spring-boot" title="Learn how to work with Spring Boot projects in VS Code">Spring Boot with VS Code</a>
             </div>
