--- a/src/overview/assets/index.html
+++ b/src/overview/assets/index.html
@@ -37,6 +37,9 @@
               <a href="https://code.visualstudio.com/docs/java/java-debugging">Debugging Tutorial</a>
             </div>
             <div>
+              <a href="https://code.visualstudio.com/docs/java/java-debugging#_run-junit-tests">Run JUnit Tests</a>
+            </div>
+            <div>
               <a href="https://github.com/Microsoft/vscode-java-pack/issues">🙋 Questions & Issues</a>
             </div>
           </div>
