Replace raw links with command delegates

--- a/src/overview/assets/index.html
+++ b/src/overview/assets/index.html
@@ -31,16 +31,16 @@
           <div class="col">
             <h3 class="font-weight-light">Help</h3>
             <div>
-              <a href="https://code.visualstudio.com/docs/languages/java">Java in VS Code Tutorial</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fcode.visualstudio.com%2Fdocs%2Flanguages%2Fjava%22" title="Learn how to work with Java code in VS Code">Java in VS Code Tutorial</a>
             </div>
             <div>
-              <a href="https://code.visualstudio.com/docs/java/java-debugging">Debugging Tutorial</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fcode.visualstudio.com%2Fdocs%2Fjava%2Fjava-debugging%22" title="Learn how to debug Java apps in VS Code">Debugging Tutorial</a>
             </div>
             <div>
-              <a href="https://code.visualstudio.com/docs/java/java-debugging#_run-junit-tests">Run JUnit Tests</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fcode.visualstudio.com%2Fdocs%2Fjava%2Fjava-debugging%23_run-junit-tests%22" title="Learn how to work with JUnit test cases in VS Code">Run JUnit Tests</a>
             </div>
             <div>
-              <a href="https://github.com/Microsoft/vscode-java-pack/issues">🙋 Questions & Issues</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fgithub.com%2FMicrosoft%2Fvscode-java-pack%2Fissues%22" title="Report issues or request features">🙋 Questions & Issues</a>
             </div>
           </div>
         </div>
@@ -48,10 +48,10 @@
           <div class="col">
             <h3 class="font-weight-light">Key Bindings</h3>
             <div ext="k--kato.intellij-idea-keybindings">
-              <a href="command:java.helper.showExtension?%22k--kato.intellij-idea-keybindings%22">IntelliJ IDEA Keybindings</a>
+              <a href="command:java.helper.showExtension?%22k--kato.intellij-idea-keybindings%22" title="Use IntlliJ hot keys in VS Code...">IntelliJ IDEA Keybindings</a>
             </div>
             <div ext="alphabotsec.vscode-eclipse-keybindings">
-              <a href="command:java.helper.showExtension?%22alphabotsec.vscode-eclipse-keybindings%22">Eclipse Keymap</a>
+              <a href="command:java.helper.showExtension?%22alphabotsec.vscode-eclipse-keybindings%22" title="Use Eclipse hot keys in VS Code...">Eclipse Keymap</a>
             </div>
           </div>
         </div>
@@ -59,22 +59,22 @@
           <div class="col">
             <h3 class="font-weight-light">Extensions</h3>
             <div ext="redhat.java">
-              <a href="command:java.helper.showExtension?%22redhat.java%22" title="Java Linting, Intellisense, formatting, refactoring, Maven/Gradle support and more...">Java Language Support by Red Hat</a>
+              <a href="command:java.helper.showExtension?%22redhat.java%22" title="Install Java Language Support extension...">Java Language Support by Red Hat</a>
             </div>
             <div ext="redhat.java">
-              <a exxt="vscjava.vscode-java-debug" href="command:java.helper.showExtension?%22vscjava.vscode-java-debug%22" title="Java debugger for Visual Studio Code">Debugger for Java</a>
+              <a href="command:java.helper.showExtension?%22vscjava.vscode-java-debug%22" title="Install Debugger for Java extension...">Debugger for Java</a>
             </div>
             <div ext="vscjava.vscode-java-test">
-              <a href="command:java.helper.showExtension?%22vscjava.vscode-java-test%22" title="Run and debug JUnit test cases">Java Test Runner</a>
+              <a href="command:java.helper.showExtension?%22vscjava.vscode-java-test%22" title="Install Java Test Runner extension...">Java Test Runner</a>
             </div>
             <div ext="vscjava.vscode-maven">
-              <a href="command:java.helper.showExtension?%22vscjava.vscode-maven%22" title="Manage Maven projects, execute goals, generate projects from archetypes">Maven for Java</a>
+              <a href="command:java.helper.showExtension?%22vscjava.vscode-maven%22" title="Install Maven for Java extension...">Maven for Java</a>
             </div>
             <div ext="adashen.vscode-tomcat">
-              <a href="command:java.helper.showExtension?%22adashen.vscode-tomcat%22" title="Debug or run Java WAR package in Apache Tomcat">Tomcat for Java</a>
+              <a href="command:java.helper.showExtension?%22adashen.vscode-tomcat%22" title="Install Tomcat for Java extension...">Tomcat for Java</a>
             </div>
             <div ext="shengchen.vscode-checkstyle">
-              <a href="command:java.helper.showExtension?%22shengchen.vscode-checkstyle%22" title="Run CheckStyle while editing code">Checkstyle for Java</a>
+              <a href="command:java.helper.showExtension?%22shengchen.vscode-checkstyle%22" title="Install Checkstyle for Java extension...">Checkstyle for Java</a>
             </div>
           </div>
         </div>
@@ -84,13 +84,13 @@
           <div class="col">
             <h3 class="font-weight-light">Spring</h3>
             <div>
-              <a href="https://code.visualstudio.com/docs/java/java-spring-boot" title="Learn how to work with Spring Boot projects in VS Code">Spring Boot with VS Code</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fcode.visualstudio.com%2Fdocs%2Fjava%2Fjava-spring-boot%22" title="Learn how to work with Spring Boot projects in VS Code">Spring Boot with VS Code</a>
             </div>
             <div>
-              <a href="https://github.com/spring-projects/spring-petclinic" title="Run PetClinic sample app in VS Code">Spring PetClinic Sample Application</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fgithub.com%2Fspring-projects%2Fspring-petclinic%22" title="Run PetClinic sample app in VS Code">Spring PetClinic Sample Application</a>
             </div>
             <div ext="pivotal.vscode-boot-dev-pack">
-              <a href="command:java.helper.showExtension?%22pivotal.vscode-boot-dev-pack%22" title="Extension collection for developing Spring Boot applications">Spring Boot Extension Pack</a>
+              <a href="command:java.helper.showExtension?%22pivotal.vscode-boot-dev-pack%22" title="Install Spring Boot Extension Pack...">Spring Boot Extension Pack</a>
             </div>
           </div>
         </div>
@@ -98,16 +98,16 @@
           <div class="col">
             <h3 class="font-weight-light">Microservices</h3>
             <div>
-              <a href="https://code.visualstudio.com/docs/java/java-kubernetes">Java with Kubernetes in VS Code</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fcode.visualstudio.com%2Fdocs%2Fjava%2Fjava-kubernetes%22" title="Learn how to work with Kubernetes in VS Code">Java with Kubernetes in VS Code</a>
             </div>
             <div>
-              <a href="https://code.visualstudio.com/docs/java/java-container">Java with Docker in VS Code</a>
+              <a href="command:java.helper.openUrl?%22https%3A%2F%2Fcode.visualstudio.com%2Fdocs%2Fjava%2Fjava-container%22" title="Learn how to work with Docker in VS Code">Java with Docker in VS Code</a>
             </div>
             <div ext="ms-kubernetes-tools.vscode-kubernetes-tools">
-              <a href="command:java.helper.showExtension?%22ms-kubernetes-tools.vscode-kubernetes-tools%22">Kubernetes Extension</a>
+              <a href="command:java.helper.showExtension?%22ms-kubernetes-tools.vscode-kubernetes-tools%22" title="Install Kubernetes extension...">Kubernetes Extension</a>
             </div>
             <div ext="peterjausovec.vscode-docker">
-              <a href="command:java.helper.showExtension?%22peterjausovec.vscode-docker%22">Docker Extension</a>
+              <a href="command:java.helper.showExtension?%22peterjausovec.vscode-docker%22" title="Install Docker extension...">Docker Extension</a>
             </div>
           </div>
         </div>
